--- a/latex/report/template.tex
+++ b/latex/report/template.tex
@@ -201,7 +201,7 @@ Gaussian
 & 8.22 $\pm$ 0.80 
 & 5.69 $\pm$ 0.10 \\
 
-Ornstein--Uhlenbeck 
+\textbf{Ornstein--Uhlenbeck}
 & \textbf{94.67 $\pm$ 0.58} 
 & \textbf{89.00 $\pm$ 2.65} 
 & \textbf{8.56 $\pm$ 0.13} 
@@ -214,9 +214,9 @@ Pink
 & 6.40 $\pm$ 0.34 \\
 
 Uniform 
-& 94.22 $\pm$ 2.84 
+& 91.22 $\pm$ 2.84 
 & 80.22 $\pm$ 8.39 
-& 8.38 $\pm$ 0.55 
+& 8.10 $\pm$ 0.55 
 & 5.51 $\pm$ 1.51 \\
 
 \hline
