--- a/latex/report/main.bib
+++ b/latex/report/main.bib
@@ -1,3 +1,15 @@
+@article{papoudakis2019survey,
+  title   = {A Survey and Critique of Multiagent Deep Reinforcement Learning},
+  author  = {Papoudakis, Georgios and Christianos, Filippos and Sch{\"a}fer, Lukas and Albrecht, Stefano V.},
+  journal = {Autonomous Agents and Multi-Agent Systems},
+  year    = {2021},
+  volume  = {35},
+  number  = {2},
+  pages   = {34},
+  doi     = {10.1007/s10458-021-09506-5}
+}
+
+
 @InProceedings{fujimoto2018:TD3, title = {Addressing Function Approximation Error in Actor-Critic Methods}, author = {Fujimoto, Scott and van Hoof, Herke and Meger, David}, booktitle = {Proceedings of the 35th International Conference on Machine Learning}, pages = {1587--1596}, year = {2018}, editor = {Jennifer Dy and Andreas Krause}, volume = {80}, series = {Proceedings of Machine Learning Research}, address = {Stockholmsmässan, Stockholm Sweden}, month = {10--15 Jul}, publisher = {PMLR}, pdf = {http://proceedings.mlr.press/v80/fujimoto18a/fujimoto18a.pdf}, url = {http://proceedings.mlr.press/v80/fujimoto18a.html}, abstract = {In value-based reinforcement learning methods such as deep Q-learning, function approximation errors are known to lead to overestimated value estimates and suboptimal policies. We show that this problem persists in an actor-critic setting and propose novel mechanisms to minimize its effects on both the actor and the critic. Our algorithm builds on Double Q-learning, by taking the minimum value between a pair of critics to limit overestimation. We draw the connection between target networks and overestimation bias, and suggest delaying policy updates to reduce per-update error and further improve performance. We evaluate our method on the suite of OpenAI gym tasks, outperforming the state of the art in every environment tested.} }
 
 
@@ -9,10 +21,5 @@
   note         = {Accessed: 2026-02-15}
 }
 
-@misc{box2d2023,
-  author       = {Catto, Erin},
-  title        = {Box2D Physics Engine Documentation},
-  year         = {2023},
-  howpublished = {\url{https://box2d.org/documentation/md_simulation.html}},
-  note         = {Accessed: 2026-02-15}
-}
+
+
